# financial-api-scrappers

./: .gitignore  README.org  pyproject.toml
docs/: coingecko.org  database.org  databursatil.org  plots.org
src/: coingecko.py  database.py  databursatil.py  plots.py
