[project]
name = "scrappers_egomezcana"
version = "0.0.1"
authors = [ { name="Eduardo A. Gomezcaña" },]
description = "A small collection of scrappers for financial data"
readme = "README.org"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPLv3"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/egomezcana/scrappers"
